# carving

./: LICENSE.md  MANIFEST.in  README.md  carve_sigil.py  eval_sigil.py  examples_basic.sh  examples_control.sh  examples_denial_of_service.sh  examples_extraction.sh  examples_harm.sh  examples_misdirection.sh  interact.py  plaintest_converter.py  setup.cfg
carving/: __init__.py  data_utils.py  eval.py  model_interface.py  utils.py
carving/config/: README.md  cfg.yaml  cfg_eval.yaml
carving/config/impl/: torch-default.yaml
carving/config/optimizer/: gcg+.yaml  gcg.yaml  greedy-search.yaml  lls.yaml  pez.yaml  random-search.yaml  soft-prompt.yaml  sto.yaml
carving/config/sigil/: DAN_collision.yaml  abjuration.yaml  abstract.yaml  abstract2.yaml  alienate.yaml  alignment.yaml  alignment_fixed.yaml  anoikis.yaml  antibomb.yaml  antifilter.yaml  antirefusal.yaml  attackrepeater.yaml  attackrepeater_fixed.yaml  barack.yaml  books3.yaml  books3_2.yaml  capybaras.yaml  capybaras2.yaml  dachshund.yaml  ddos.yaml  divider.yaml  eot_collision.yaml  exfiltration.yaml  exfiltration2.yaml  fishing.yaml  fishing2.yaml  forgetter.yaml  good_assistant.yaml  hackaprompt_lvl10.yaml  hidden_attack.yaml  hidden_instruction.yaml  kenobi.yaml  lawsuit.yaml  lawsuit2.yaml  magnet.yaml  nanactattack.yaml  nanattack.yaml  nanspreadattack.yaml  nomouth.yaml  numbers.yaml  (+25 more)
carving/config/wandb/: default.yaml
carving/data/: README.MD  judge_prompts.jsonl
carving/optimizers/: __init__.py  gcg.py  gcgplus.py  generic_optimizer.py  greedy_search.py  lls_genetic_algorithm.py  pez.py  random_search.py  softprompt.py  sto.py
carving/sigils/: __init__.py  constraints.py  control_sigils.py  dos_sigils.py  extraction_sigils.py  generic_sigils.py  harmful_sigils.py  meta_sigils.py  misdirection_sigils.py  utils.py
outputs/: README.MD
