

[metadata]
name = carving
version = 0.1.0
author = Jonas Geiping, Alex Stein, Manli Shu, Khalid Saifullah, Yuxin Wen, Tom Goldstein
author_email = jonas.geiping@gmail.com
url = https://github.com/JonasGeiping/carving
description = A package to generate adversarial attacks against large language models.
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
platform = linux
keywords = LLMs, genAI, adversarial_attacks, security, safety, misdirection, denial-of-service
classifiers =
    Topic :: Security
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
homepage = "https://github.com/JonasGeiping/carving"
repository = "https://github.com/JonasGeiping/carving"
# documentation = "put arxiv link here""

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.9
packages = find:

setup_requires =
    setuptools

install_requires =
    torch >= 2.0.1
    hydra-core >= 1.2
    scipy
    tokenizers
    transformers==4.35.*
    packaging
    ninja
    flash-attn
    datasets
    accelerate
    evaluate
    pynvml
    psutil
    einops
    safetensors
    tqdm
    mauve-text
    # wandb # if you want to use it
    # sentencepiece # package only necessary for 3rdparty tokenizers, like from internlm or vicuna

scripts =
  carve_sigil.py

[options.package_data]
* =  "*.yaml", "*.txt"


[tool.black]
line-length = 140

[check-manifest]
ignore =
    .ipynb
    .sh


#this is the pytorch source linting https://github.com/pytorch/pytorch/blob/master/.flake8
[flake8]
enable-extensions = G
select = B,C,E,F,G,P,SIM1,T4,W,B9
max-line-length = 140
# C408 ignored because we like the dict keyword argument syntax
# E501 is not flexible enough, we're using B950 instead
ignore =
    E203,E305,E402,E501,E721,E741,F405,F821,F841,F999,W503,W504,C408,E302,W291,E303,
    # fix these lints in the future
    E275,
    # shebang has extra meaning in fbcode lints, so I think it's not worth trying
    # to line this up with executable bit
    EXE001,
    # these ignores are from flake8-bugbear; please fix!
    B007,B008,B017,B019,B020,B023,B024,B026,B028,B903,B904,B905,B906,B907
    # these ignores are from flake8-comprehensions; please fix!
    C407,
    # these ignores are from flake8-logging-format; please fix!
    G100,G101,G200,G201,G202
    # these ignores are from flake8-simplify. please fix or ignore with commented reason
    SIM105,SIM108,SIM110,SIM111,SIM113,SIM114,SIM115,SIM116,SIM117,SIM118,SIM119,SIM12,
    # flake8-simplify code styles
    SIM102,SIM103,SIM106,SIM112,
    # I claim to know what I'm doing when doing this:
    B006,
    # We like commented out code sometimes :<
    E800,
    # and inefficient logging:
    G004,
    # overkill for ML code
    ECE001
per-file-ignores =
    __init__.py: F401
optional-ascii-coding = True
  exclude =
      ./.git
      /build
      examples
      assets
      .git
      __pycache__
      dl/*
      scripts/*
      log/*
      *.pyi
